@@ -1,8 +1,25 @@
 ================================================================================================
+change - ComponentRegistration<S>.Startable public method has been removed.
+	ComponentRegistration<S>.StartUsingMethod public method was moved to extension method.
+	ComponentRegistration<S>.StopUsingMethod public method was moved to extension method.
+
+impact - low
+fixability - trivial
+revision - 6710
+	
+description - StartUsingMethod/StopUsingMethod belong to StartableFacility and do not make sense
+	as part of generic API. Startable method was superfluous.
+	
+fix - Remove calls to Startable(). Import namespace Castle.Facilities.Startable to use
+	StartUsingMethod and StopUsingMethod as extension methods.
+
+================================================================================================
 change - DefaultProxyFactory.CreateProxyGenerationOptionsFrom protected method  and
 	DefaultProxyFactory.CustomizeProxy protected virtual method have changed signature
 
 impact - very low
+fixability - easy
+revision - 6691
 	
 description - the methods now also takes IKernel and CreationContext, to be used by IReferences
 	to do resolution of components they reference
@@ -16,6 +33,8 @@ change - ProxyOption's properties changed types:
 	MixIns from object[] to IEnumerable<IReference<object>>
 	
 impact - very low
+fixability - easy
+revision - 6691
 	
 description - the properties now use IReferences instead of live objects to allow for
 	resolution of their values from the container, as required in case of usage from xml.
